hide refresh rate for visualizer

--- a/app/views/partials/visualizer.html.haml
+++ b/app/views/partials/visualizer.html.haml
@@ -4,7 +4,7 @@
       .item-x3
         %canvas.visualizer
       .item
-        %input#refresh{type:"TEXT", value: "10"}
+        %input#refresh{type:"TEXT", value: "10", hidden: true}
     %audio#jp_audio_i{src:"http://localhost:9292/stream/10"}
  
 :javascript
