gravatar for profiles

--- a/app/views/partials/logged_in.html.haml
+++ b/app/views/partials/logged_in.html.haml
@@ -1,2 +1,4 @@
-%li
-  logged in as #{user.username}
+%li.hidden-xs.hidden-sm
+  %img{src: "//www.gravatar.com/avatar/#{gravatar_hash(user.email)}"}
+%li.visible-xs.visible-sm
+  #{user.username}
