--- a/app/views/partials/visualizer.html.haml
+++ b/app/views/partials/visualizer.html.haml
@@ -42,15 +42,47 @@
     // frequencyBinCount tells you how many values you'll receive from the analyser
     var bufferLength = analyser.frequencyBinCount;
     var dataArray = new Uint8Array(bufferLength);
-  //  audio.play();
+    var nextColor = null;
+    
+    canvasCtx.fillStyle = 'rgb(20,20,20)';
     canvasCtx.clearRect(0, 0, WIDTH, HEIGHT);
 
     function randomNumber(limit) {
       return Math.ceil(Math.random() * limit);
     }
 
-    function randomColor(num) {
-      return 'rgb(' + randomNumber(255) + ',' + randomNumber(255) + ',' + randomNumber(255) + ')';
+    function randomNumbers(count, limit) {
+      var ret = new Array();
+      for(var i = 0; i<count; i++) {
+        ret.push(randomNumber(limit));
+      }
+
+    function formatColor(nums) {
+      return 'rgb(' + nums[0] + ',' + nums[1] + ',' + nums[2] + ')';
+    }
+
+    function parseColor(color) {
+      var regex = 'rgb\(([0-9]*),([0-9]*),([0-9]*)\)'
+      var matches = regex.exec(color);
+      var ret = new Array();
+      for(var i = 0; i<matches.length; i++) {
+        ret.push(matches[i]);
+      }
+      return ret;
+    }
+
+    function mutateColor(currentColor, target) {
+      var current = parseColor(currentColor);
+      for(var i = 0; i<current.length; i++) {
+        if(current[i] == target[i]) {
+          continue;
+        }else if(current[i] < target[i]) { 
+          current[i] += 1; 
+        }else
+          current[i] -= 1;
+        }
+      }
+      return current;
     }
 
     //renderFrame();
@@ -59,10 +91,17 @@
       var refresh = document.getElementById("refresh").value;
       analyser.getByteTimeDomainData(dataArray);
       //canvasCtx.fillStyle = 'rgb(0, 0, 20)';
-      if(iter%250 == 0) {
-        canvasCtx.fillStyle = randomColor(iter);
+
+      //mutate background color
+      var next = formatColor(mutateColor(canvas.fillStyle));
+
+      if(nextColor == canvasCtx.fillStyle) {
+        nextColor = formatColor(randomNumbers(3, 255));
+      }else {
+        canvasCtx.fillStyle = next;
       }
-        canvasCtx.fillRect(0, 0, WIDTH, HEIGHT);
+        
+      canvasCtx.fillRect(0, 0, WIDTH, HEIGHT);
       canvasCtx.lineWidth = 1.8;
       if(iter%1==0) {
         canvasCtx.strokeStyle = randomColor(iter);
