--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -5,7 +5,9 @@
   .col-xs-12.col-md-offset-2.col-sm-6.col-lg-4.sp-top-sm
     =haml :"partials/visualizer"
 .row
-  .col-xs-12.col-md-offset-2.col-md-7.sp-top-sm#summary
+  .col-xs-12.col-md-offset-2.col-md-7.sp-top-sm.summary#album_summary
+.row
+  .col-xs-12.col-md-offset-2.col-md-7.sp-top-sm.summary#track_summary
 
 :javascript
     document.getElementById("image").style.background="url('#{url_for "/images/albums/" + (album.image || "")}')";
@@ -15,11 +17,18 @@
     //document.getElementById("content").style.minHeight="900px";
 
     var myPlaylist;
-    var summary_available=true;
+    var album_summary_available=true;
+    var track_summary_available=true;
 
     function album_summary(data) {
-      $('#summary').append("<div class='summary'><p class='text'>" + data.summary + "</p>");
-      $('#summary').append("<div class='links'><a target='_' href='" + data.url + "'>wikipedia</a></div></div>");
+      $('#album_summary').append("<div class='summary'><p class='text'>" + data.summary + "</p>");
+      $('#album_summary').append("<div class='links'><a target='_' href='" + data.url + "'>wikipedia</a></div></div>");
+    }
+
+    function track_summary(data) {
+      $('#track_summary').empty();
+      $('#track_summary').append("<div class='summary'><p class='text'>" + data.summary + "</p>");
+      $('#track_summary').append("<div class='links'><a target='_' href='" + data.url + "'>wikipedia</a></div></div>");
     }
 
     function get_id(str) {
@@ -49,7 +58,7 @@
             if (index == current) {
               if(!scrubbing) {
                 $.ajax({type: "GET", url: obj.mp3.replace("stream","log")});
-                get_summary("#{url_for("/track")}" + get_id(obj.mp3) + '/summary');
+                get_summary("#{url_for("/track")}" + get_id(obj.mp3) + '/summary', track_summary, track_summary_available, "#track_summary");
               }
               $('.navbar-info').html("                                   \
                 <a href='#{url_for("/artist/#{album.artist.id}")}' title='#{album.artist.name}'>      \
@@ -72,7 +81,7 @@
         <a href='#{url_for("/album/#{album.id}")}' title='#{album.title}'>      \
           <span class='album-title'>#{shorten album.title, 20}</span> \
         </a>");
-      get_summary("#{url_for("/album/#{album.id}/summary")}", album_summary);
+      get_summary("#{url_for("/album/#{album.id}/summary")}", album_summary, album_summary_available, "#album_summary");
     });
 
 
