--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -38,7 +38,7 @@
             %input.form-control{type: "TEXT", id: "q", name: "q", autofocus: true, placeholder: "Search"}
         %ul.nav.navbar-nav
           %li
-            %span.navbar-info
+            %span.navbar-text.navbar-info
         %ul.nav.navbar-nav.pull-right
           = haml :'partials/logged_in', locals: {user: current_user}  if current_user
           = haml :'partials/not_logged_in' if !current_user
