hide refresh and remove unused audio element

--- a/app/views/partials/visualizer.html.haml
+++ b/app/views/partials/visualizer.html.haml
@@ -3,9 +3,9 @@
     #visualization
       .item-x3
         %canvas.visualizer
-      .item
+      .item.hidden
         %input#refresh{type:"TEXT", value: "10", }
-    %audio#jp_audio_i{src:"http://localhost:9292/stream/10"}
+    //%audio#jp_audio_i{src:"http://localhost:9292/stream/10"}
  
 :javascript
   var visualization_enabled = true;
