--- a/app/views/search.html.haml
+++ b/app/views/search.html.haml
@@ -1,4 +1,8 @@
 %h3
+  Playlists
+-playlists.each do |playlist|
+  =haml :"partials/playlist", locals: {playlist: playlist, admin: false}
+%h3
   Artists
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
   =haml :"partials/artist", locals: {artist: artist, admin: false}
