--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -21,6 +21,8 @@
     %script
       //default is to enable keypress functions unless page opts out
       var keypress_enable=true;
+      var album_summary_available=false;
+      var track_summary_available=true;
   %body#image
     %nav.navbar.navbar-default#nav{role: "navigation"}
       .navbar-header
