--- a/app/views/playlist.html.haml
+++ b/app/views/playlist.html.haml
@@ -5,10 +5,10 @@
   .col-xs-12.col-md-offset-2.col-sm-6.col-lg-4.sp-top-sm
     =haml :"partials/visualizer"
 :javascript
-  document.getElementById("content").style.background="url('#{url_for "/images/albums/" + (playlist.image_path || "")}')";
-  document.getElementById("content").style.backgroundPosition="0px 0px";
-  document.getElementById("content").style.backgroundSize="contain";
-  document.getElementById("content").style.backgroundRepeat="no-repeat";
+  document.getElementById("image").style.background="url('#{url_for "/images/albums/" + (playlist.image_path || "")}')";
+  document.getElementById("image").style.backgroundPosition="center";
+  document.getElementById("image").style.backgroundSize="contain";
+  document.getElementById("image").style.backgroundRepeat="no-repeat";
   //document.getElementById("content").style.minHeight="900px";
 
   var myPlaylist
@@ -18,15 +18,15 @@
     myPlaylist = new jPlayerPlaylist({
       jPlayer: "#jquery_jplayer_1",
       cssSelectorAncestor: "#jp_container_1"
-    }, 
+    },
     [
       #{ playlist.track_list }
-    ], 
+    ],
     {
       swfPath: "http://patf.net/js",
       supplied: "mp3",
       wmode: "window"
-    });  
+    });
   });
 
   $("#jquery_jplayer_1").bind($.jPlayer.event.play, function (event) {
