notifications on track plays

--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -18,6 +18,7 @@
     %script{type: "text/javascript", src: "#{url_for "/libs/imagesloaded/imagesloaded.pkgd.min.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/devbridge-autocomplete/dist/jquery.autocomplete.min.js"}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/form_actions.js'}"}
+    %script{:type => "text/javascript", :src => "#{url_for '/js/notifications.js'}"}
     %script
       //default is to enable keypress functions unless page opts out
       var keypress_enable=true;
