--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -41,6 +41,7 @@
           %input{type:"Hidden", id: "lookup_id", name: "lookup_id"}
           .form-group
             %input.form-control{type: "TEXT", id: "q", name: "q", autofocus: true, placeholder: "Search"}
+        = haml :'partials/profile', locals: {user: current_user}.merge(locals)
     .container-fluid#content
       =yield
     %div.sp-bottom-sm.row#footer
