--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -1,6 +1,9 @@
 .row
   .col-xs-12.col-md-offset-2.col-sm-6.col-lg-4.sp-top-sm#player
-    =haml :"partials/player", locals: { admin_url: "#{url_for("/admin/album/#{album.id}")}" }
+    .favorites
+      =haml :"partials/favorites", locals: { tracks: album.tracks }
+    .player
+      =haml :"partials/player", locals: { admin_url: "#{url_for("/admin/album/#{album.id}")}" }
 .row
   .col-xs-12.col-md-offset-2.col-sm-6.col-lg-4.sp-top-sm
     =haml :"partials/visualizer"
@@ -11,7 +14,6 @@
 -if current_user
   .row
     .col-xs-12.col.md-offset-2.col.md-7.sp-top-sm.favorites#favorites
-      =haml :"partials/favorites", locals: { tracks: album.tracks }
 
 :javascript
     document.getElementById("image").style.background="url('#{url_for "/images/albums/" + (album.image || "")}')";
