--- a/public/css/default.css
+++ b/public/css/default.css
@@ -109,3 +109,31 @@ canvas {
   vertical-align: middle;
   float: none;
 }
+
+#player {
+  width: 100%;
+  height: 100%
+}
+
+.player {
+  float: right;
+  display: inline-block;
+  width: calc(100% - 20px);
+  height: 100%;
+}
+
+.favorites {
+  padding-top: 86px;
+  float: left;
+  background-color: white;
+  display: inline-block;
+  width: 20px;
+  height: 100%;
+}
+
+.track {
+  padding-left: 5px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  cursor: hand;
+}
