--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -2,7 +2,7 @@
   .col-xs-12.col-md-offset-2.col-sm-6.col-lg-4.sp-top-sm#player
     -if current_user
       .favorites
-        =haml :"partials/favorites", locals: { tracks: album.tracks }
+        =haml :"partials/favorites", locals: { tracks: order_tracks(album.tracks) }
     .player
       =haml :"partials/player", locals: { admin_url: "#{url_for("/admin/album/#{album.id}")}" }
 .row
