--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -41,6 +41,9 @@
           %input{type:"Hidden", id: "lookup_id", name: "lookup_id"}
           .form-group
             %input.form-control{type: "TEXT", id: "q", name: "q", autofocus: true, placeholder: "Search"}
+        %ul.nav.navbar-nav
+          %li
+            %span.navbar-text.navbar-info
         = haml :'partials/profile', locals: {user: current_user}.merge(locals)
     .container-fluid#content
       =yield
