authentication required for accessing admin from player

--- a/app/views/partials/player.html.haml
+++ b/app/views/partials/player.html.haml
@@ -48,7 +48,7 @@
       %span
         Update Required
       To play the media you will need to either update your browser to a recent version
-  -unless admin_url.nil?
+  -unless !current_user || admin_url.nil?
     .edit
       %a.item{href: "#{admin_url}" }
         Edit
