--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -6,14 +6,14 @@
     %meta{:charset => "utf-8"}
     %meta{:name => "viewport", :content=>"width=device-width, initial-scale=1, maximum-scale=1"}
     %meta{:name=>"apple-mobile-web-app-capable", :content=>"yes"}
+    %link{:rel => "stylesheet", :href => "#{url_for '/libs/jplayer/dist/skin/blue.monday/css/jplayer.blue.monday.min.css'}", :type => "text/css" }
     %script{:type => "text/javascript", :src => "#{url_for('/libs/jquery/dist/jquery.min.js')}"}
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/bootstrap/dist/css/bootstrap.min.css'}", :type => "text/css"}
-    %link{:rel => "stylesheet", :href => "#{url_for '/libs/jplayer/skin/blue.monday/jplayer.blue.monday.css'}", :type => "text/css" }
-    %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
+    <!--%link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }-->
     %link{rel:"shortcut icon",href:"//patf.net/images/bemused.ico"}
     %script{:type => "text/javascript", :src => "#{url_for '/libs/bootstrap/dist/js/bootstrap.min.js'}"}
-    %script{:type => "text/javascript", :src => "#{url_for '/libs/jplayer/jquery.jplayer/jquery.jplayer.js'}"}
-    %script{:type => "text/javascript", :src => "#{url_for '/libs/jplayer/add-on/jplayer.playlist.js'}"}
+    %script{:type => "text/javascript", :src => "#{url_for '/libs/jplayer/dist/jplayer/jquery.jplayer.min.js'}"}
+    %script{:type => "text/javascript", :src => "#{url_for '/libs/jplayer/dist/add-on/jplayer.playlist.js'}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/masonry/dist/masonry.pkgd.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/imagesloaded/imagesloaded.pkgd.min.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/devbridge-autocomplete/dist/jquery.autocomplete.min.js"}"}
