--- a/app/views/partials/player.html.haml
+++ b/app/views/partials/player.html.haml
@@ -1,49 +1,40 @@
 #jquery_jplayer_1.jp-jplayer
-#jp_container_1.jp-audio
+#jp_container_1.jp-audio{role: 'application', aria: { label: 'media player'} }
   .jp-type-playlist
     .jp-gui.jp-interface
-      %ul.jp-controls
-        %li
-          %a.jp-previous{:href=>'javascript:;', :tabindex => '1'}
-            previous
-        %li
-          %a.jp-play{:href=>'javascript:;', :tabindex => '1'}
-            play
-        %li
-          %a.jp-pause{:href=>'javascript:;', :tabindex => '1'}
-            pause
-        %li
-          %a.jp-next{:href=>'javascript:;', :tabindex => '1'}
-            next
-        %li
-          %a.jp-stop{:href=>'javascript:;', :tabindex => '1'}
-            stop
-        %li
-          %a.jp-mute{:href=>'javascript:;', :tabindex => '1'}
-            mute
-        %li
-          %a.jp-unmute{:href=>'javascript:;', :tabindex => '1'}
-            unmute
-        %li
-          %a.jp-volume-max{:href=>'javascript:;', :tabindex=>'1'}
-            max volume
-      %div.jp-progress
-        %div.jp-seek-bar
-          %div.jp-play-bar
-      %div.jp-volume-bar
-        %div.jp-volume-bar-value
-      %div.jp-current-time
-      %div.jp-duration
-      %ul.jp-toggles
-        %li
-          %a.jp-repeat{:href=>"javascript:;", :tabindex=>'1'}
-            repeat
-        %li
-          %a.jp-repeat-off{:href=>"javascript:;", :tabindex=>'1'}
-            repeat-off
-    %div.jp-playlist
+      .jp-controls
+        %button.jp-previous{role: 'button', :tabindex => '0'}
+          previous
+        %button.jp-play{role: 'button', :tabindex => '0'}
+          play
+        %button.jp-next{role: 'button', :tabindex => '0'}
+          next
+        %button.jp-stop{role: 'button', :tabindex => '0'}
+          stop
+      .jp-progress
+        .jp-seek-bar
+          .jp-play-bar
+      .jp-volume-controls
+        %button.jp-mute{role: 'button', :tabindex => '0'}
+          mute
+        %button.jp-volume-max{role: 'button', :tabindex=>'0'}
+          max volume
+        .jp-volume-bar
+          .jp-volume-bar-value
+      .jp-time-holder
+        .jp-current-time{role: 'timer', aria: { label: 'time'}}
+          &nbsp;
+        .jp-duration{role: 'timer', aria: { label: 'duration'}}
+          &nbsp;
+      .jp-toggles
+        %button.jp-repeat{role: 'button', :tabindex=>'0'}
+          repeat
+        %button.jp-shuffle{role: 'button', :tabindex=>'0'}
+          shuffle
+    .jp-playlist
       %ul
         %li
+          &nbsp;
     %div.jp-no-solution
       %span
         Update Required
