night of the return of the css

--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -9,7 +9,7 @@
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/jplayer/dist/skin/blue.monday/css/jplayer.blue.monday.min.css'}", :type => "text/css" }
     %script{:type => "text/javascript", :src => "#{url_for('/libs/jquery/dist/jquery.min.js')}"}
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/bootstrap/dist/css/bootstrap.min.css'}", :type => "text/css"}
-    <!--%link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }-->
+    %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
     %link{rel:"shortcut icon",href:"//patf.net/images/bemused.ico"}
     %script{:type => "text/javascript", :src => "#{url_for '/libs/bootstrap/dist/js/bootstrap.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/libs/jplayer/dist/jplayer/jquery.jplayer.min.js'}"}
