--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -34,7 +34,7 @@
           %span.icon-bar
           %span.icon-bar
         %a.navbar-brand{href:"#{url_for("/")}"}
-          Bemused
+          PShare
       .collapse.navbar-collapse#navbar-collapse
         %form.navbar-form.navbar-left{id: "search", action: "#{url_for("/search")}", method: "POST"}
           %input{type:"Hidden", id: "lookup_type", name: "lookup_type"}
